Bug 1050160 - DeadIfUnused should not check for resume points. r=nbp